--- a/frontend/style.css
+++ b/frontend/style.css
@@ -14,7 +14,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #ccd6e5b5;
+}
+
+img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  filter: brightness(0.4);
 }
 
 .auth-page__container {
@@ -26,9 +35,7 @@ body {
   align-items: center;
   padding: 1rem;
   column-gap: 0.5rem;
-  border: 1px solid rgba(0, 0, 0, 0.078);
-  background-color: rgba(255, 255, 255, 0.456);
-  border-radius: 1rem;
+  background-color: rgba(255, 255, 255, 0.881);
 }
 
 .auth-page__sign-in {
@@ -63,7 +70,7 @@ body {
 
 .auth-page__form label {
     font-size: .9rem;
-    color: #DC9C6C;
+    color: rgba(0, 0, 0, 0.507);
     letter-spacing: 1.2px;
 }
 
@@ -74,9 +81,9 @@ body {
   border: none;
   border-radius: .2rem;
   outline: none;
-  background: #9ebe9672;
+  /* background: rgba(0, 0, 0, 0.273); */
   color: #365642;
-
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.347);
 }
 
 
@@ -91,5 +98,5 @@ body {
 
 .horizontal-line {
   border: 1px solid rgba(0, 0, 0, 0.068);
-  height: 95%;
+  height: 90%;
 }
