--- a/frontend/pages/home/home.css
+++ b/frontend/pages/home/home.css
@@ -20,8 +20,6 @@ body {
 .home-page__container {
   width: 100%;
   height: 100%;
-  /* display: flex; */
-  /* flex-direction: column; */
 }
 
 .home-page__cover-photo {
@@ -32,8 +30,8 @@ body {
 
 .home-page__profile-photo {
   border: 4px solid white;
-  width: 20rem;
-  height: 20rem;
+  width: 18rem;
+  height: 18rem;
   border-radius: 50%;
   overflow: hidden;
   position: absolute;
@@ -59,7 +57,7 @@ body {
 
 .home-page__menu {
   width: 100%;
-  min-height: 7vh;
+  min-height: 6vh;
   margin: 0.1rem 0 0 0;
   display: flex;
   justify-content: space-between;
@@ -68,15 +66,11 @@ body {
 }
 
 .home-page__menu-half {
-  width: 50%;
+  width: 45%;
   display: flex;
   align-items: center;
   letter-spacing: 0.2rem;
   justify-content: center;
-}
-
-.home-page__menu :nth-child(2) {
-  width: 45%;
 }
 
 .home-page__menu-half h1 {
@@ -104,7 +98,7 @@ body {
 }
 
 .home-page__menu-list li:hover {
-  margin-bottom: -2px;
+  margin-bottom: -2px;  
   border-bottom: 2px solid rgba(255, 255, 255, 0.857);
 }
 
@@ -148,7 +142,7 @@ body {
   height: 80%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 .home-page__hero-container div {
@@ -160,11 +154,11 @@ body {
 
 .home-page__hero-container div:first-child {
     flex-grow: 1;
-    color: rgba(0, 0, 0, 0.609);
+    color: #202a2187;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     background: none;
     box-shadow: none;
 }
