--- a/frontend/style.css
+++ b/frontend/style.css
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+  font-size: 100%;
+}
+
 body {
   font-size: 100%;
   width: 100%;
@@ -28,8 +34,8 @@ img {
 
 .auth-page__container {
   width: 80%;
+  min-width: 56.25rem;
   height: 70%;
-  /* background-color: aqua; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -39,17 +45,23 @@ img {
 }
 
 .auth-page__sign-in {
-  height: 70%;
+  min-height: 80%;
   /* background-color: beige; */
   flex-grow: 1;
   padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .auth-page__sign-up {
-  height: 70%;
+  min-height: 80%;
   /* background-color: aquamarine; */
   flex-grow: 1;
   padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .auth-page__header {
@@ -101,4 +113,3 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.068);
   height: 90%;
 }
-
