--- a/frontend/pages/home/home.css
+++ b/frontend/pages/home/home.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  user-select: none;
 }
 
 body,
@@ -52,7 +53,8 @@ body {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  opacity: 0.7;
+  opacity: 0.8;
+  filter: blur(3px);
 }
 
 .home-page__menu {
@@ -83,7 +85,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 2.5rem;
+  gap: 2rem;
   list-style: none;
   color: rgba(255, 255, 255, 0.857);
   letter-spacing: 0rem;
@@ -92,24 +94,69 @@ body {
 .home-page__menu-list li {
   cursor: pointer;
   display: flex;
-  gap: .3rem;
+  gap: 0.3rem;
   align-items: center;
-  font-size: .9rem;
+  font-size: 0.9rem;
+}
+
+.fa-bars {
+  display: none;
+  transition: all 1s ease;
+  cursor: pointer;
+}
+
+.home-page__menu-half__burguer-menu {
+  position: absolute;
+  right: 5%;
+  width: 13rem;
+  min-height: 10rem;
+  display: none;
+  justify-content: center;
+  font-size: 1rem;
+  padding: 0.5rem;
+}
+
+.home-page__menu-half__burguer-menu ul {
+  display: none;
+  flex-direction: column;
+  border-radius: 0.2rem;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.297);
+  width: 100%;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: white;
+}
+
+.home-page__menu-half__burguer-menu li {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+  cursor: pointer;
 }
 
 .home-page__menu-list li:hover {
-  margin-bottom: -2px;  
+  margin-bottom: -2px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.857);
 }
 
 .home-page__menu-list li i {
-    font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 .home-page__main {
   width: 100%;
   min-height: 120vh;
   display: flex;
+}
+
+.home-page__main__user-name  {
+  position: absolute;
+  top: 45vh;
+  left: 50%;
+  transform: translateX(-50%);
+  display: none;
+  width: 90%;
+  font-size: 2rem;
 }
 
 .home-page__photos {
@@ -125,11 +172,14 @@ body {
   background: linear-gradient(rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 0.061));
   border-radius: 1rem;
   box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.048);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.7rem;
 }
 
 .home-page__hero {
   flex-grow: 3;
-  /* background-color: lightskyblue; */
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -150,26 +200,139 @@ body {
   background: linear-gradient(rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 0.061));
   border-radius: 1rem;
   box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.048);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .home-page__hero-container div:first-child {
-    flex-grow: 1;
-    color: #202a2187;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5rem;
-    background: none;
-    box-shadow: none;
+  flex-grow: 1;
+  color: #202a2187;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  background: none;
+  box-shadow: none;
+  margin-bottom: -1rem;
 }
 
 .home-page__footer {
-    width: 100%;
-    height: 2.5rem;
-    background-color: #202a21da;
+  width: 100%;
+  height: 2.5rem;
+  background-color: #202a21da;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgba(255, 255, 255, 0.857);
+  font-size: 0.85rem;
+}
+
+@media screen and (max-width: 1300px) {
+  .home-page__menu-half:nth-child(2) {
+    padding-right: 2%;
+    justify-content: end;
+  }
+
+  .home-page__menu ul li {
+    font-size: 0.7rem;
+  }
+
+  .home-page__main__user-name  {
+    top: 48vh;
+    z-index: -1;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .home-page__menu-list li {
+    display: none;
+  }
+
+  .home-page__menu-half:nth-child(2) {
+    justify-content: end;
+    padding-right: 5%;
+  }
+
+  .fa-bars {
     display: flex;
-    align-items: center;
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  .home-page__menu-half__burguer-menu {
+    display: none;
+  }
+
+  .home-page__menu-half__burguer-menu ul {
+    display: flex;
+  }
+
+  .home-page__menu-half h1 {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .home-page__menu-half h1 {
+    display: none;
+  }
+
+  .home-page__main {
+    flex-direction: column;
+  }
+
+  .home-page__main__user-name  {
+    display: flex;
     justify-content: center;
-    color: rgba(255, 255, 255, 0.857);
-    font-size: .85rem;
+  }
+
+  .home-page__photos {
+    flex-grow: 1;
+    height: 10vh;
+    margin-top: 20vh;
+  }
+
+  .home-page__photos div {
+    height: 100%;
+    width: 90%;
+  }
+
+  .home-page__hero {
+    flex-grow: 3;
+    height: 40vh;
+  }
+  
+  .home-page__hero-container {
+    width: 90%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+  
+  .home-page__hero-container div {
+    flex-grow: 4;
+    background: linear-gradient(rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 0.061));
+    border-radius: 1rem;
+    box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.048);
+  }
+  
+  .home-page__hero-container div:first-child {
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .home-page__profile-photo {
+    width: 16rem;
+    height: 16rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .home-page__profile-photo {
+    width: 12rem;
+    height: 12rem;
+  }
 }
