Has been finished responsive design

--- a/frontend/pages/home/home.css
+++ b/frontend/pages/home/home.css
@@ -11,9 +11,6 @@
 body,
 html {
   font-size: 100%;
-}
-
-body {
   width: 100%;
   height: 100%;
 }
@@ -25,7 +22,7 @@ body {
 
 .home-page__cover-photo {
   margin: 0.1rem 0.1rem 0;
-  min-height: 30vh;
+  min-height: 18rem;
   position: relative;
 }
 
@@ -59,7 +56,7 @@ body {
 
 .home-page__menu {
   width: 100%;
-  min-height: 6vh;
+  min-height: 3rem;
   margin: 0.1rem 0 0 0;
   display: flex;
   justify-content: space-between;
@@ -145,18 +142,18 @@ body {
 
 .home-page__main {
   width: 100%;
-  min-height: 120vh;
   display: flex;
 }
 
-.home-page__main__user-name  {
+.home-page__main__user-name {
   position: absolute;
-  top: 45vh;
+  top: 90rem;
   left: 50%;
   transform: translateX(-50%);
   display: none;
   width: 90%;
   font-size: 2rem;
+  z-index: -1;
 }
 
 .home-page__photos {
@@ -164,6 +161,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 70rem;
 }
 
 .home-page__photos div {
@@ -228,6 +226,8 @@ body {
   font-size: 0.85rem;
 }
 
+/* Responsive */
+
 @media screen and (max-width: 1300px) {
   .home-page__menu-half:nth-child(2) {
     padding-right: 2%;
@@ -237,10 +237,12 @@ body {
   .home-page__menu ul li {
     font-size: 0.7rem;
   }
+}
 
-  .home-page__main__user-name  {
-    top: 48vh;
-    z-index: -1;
+@media screen and (max-width: 1200px) and (max-height: 800px) {
+  .home-page__profile-photo {
+    width: 15rem;
+    height: 15rem;
   }
 }
 
@@ -282,44 +284,52 @@ body {
     flex-direction: column;
   }
 
-  .home-page__main__user-name  {
+  .home-page__main__user-name {
     display: flex;
     justify-content: center;
+    top: 28rem;
   }
 
   .home-page__photos {
     flex-grow: 1;
-    height: 10vh;
-    margin-top: 20vh;
+    margin-top: 11rem;
+    min-height: 0;
   }
 
   .home-page__photos div {
-    height: 100%;
+    height: 16rem;
     width: 90%;
   }
 
   .home-page__hero {
     flex-grow: 3;
-    height: 40vh;
+    height: 40rem;
   }
-  
+
   .home-page__hero-container {
     width: 90%;
-    height: 80%;
+    height: 100rem;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
   }
-  
+
   .home-page__hero-container div {
     flex-grow: 4;
-    background: linear-gradient(rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 0.061));
+    background: linear-gradient(
+      rgba(0, 0, 0, 0.05),
+      rgba(255, 255, 255, 0.061)
+    );
     border-radius: 1rem;
     box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.048);
   }
-  
+
   .home-page__hero-container div:first-child {
     font-size: 1.3rem;
+  }
+
+  .home-page__footer {
+    margin-top: 5rem;
   }
 }
 
@@ -332,7 +342,7 @@ body {
 
 @media screen and (max-width: 400px) {
   .home-page__profile-photo {
-    width: 12rem;
-    height: 12rem;
+    width: 15rem;
+    height: 15rem;
   }
 }
