--- a/frontend/style.css
+++ b/frontend/style.css
@@ -9,14 +9,14 @@
 
 html {
   width: 100%;
-  height: 100%;
+  height: 100svh;
   font-size: 100%;
 }
 
 body {
   font-size: 100%;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +35,7 @@ img {
 .auth-page__container {
   width: 80%;
   min-width: 56.25rem;
-  height: 70%;
+  min-height: 41.875rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -67,7 +67,7 @@ img {
 .auth-page__header {
   text-align: center;
   font-size: 1.8rem;
-  color: #DC9C6C;
+  color: #dc9c6c;
 }
 
 .auth-page__form {
@@ -81,35 +81,83 @@ img {
 }
 
 .auth-page__form label {
-    font-size: .8rem;
-    color: rgba(0, 0, 0, 0.507);
-    letter-spacing: 1.2px;
+  font-size: 0.8rem;
+  color: rgba(0, 0, 0, 0.507);
+  letter-spacing: 1.2px;
 }
 
 .auth-page__form input {
   width: 100%;
   height: 2rem;
-  padding-left: .8rem;
+  padding-left: 0.8rem;
   border: none;
-  border-radius: .2rem;
+  border-radius: 0.2rem;
   outline: none;
   /* background: rgba(0, 0, 0, 0.273); */
   color: #365642;
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.347);
-  margin-top: .3rem;
+  margin-top: 0.3rem;
 }
 
-
 .auth-page__form input[type="submit"] {
-    min-height: 3rem;
-    margin-top: 2rem;
-    padding-left: 0;
-    font-size: 1.1rem;
-    background-color: #DC9C6C;
-    color: white;
+  min-height: 3rem;
+  margin-top: 2rem;
+  padding-left: 0;
+  font-size: 1.1rem;
+  background-color: #dc9c6c;
+  color: white;
 }
 
 .horizontal-line {
   border: 1px solid rgba(0, 0, 0, 0.068);
   height: 90%;
+}
+
+@media screen and (max-width: 1200px) and (max-height: 800px) {
+  html {
+    font-size: 80%;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  html {
+    font-size: 60%;
+  }
+
+  .auth-page__container {
+    flex-direction: column;
+    min-width: 18.125rem;
+    min-height: 80%;
+    padding: 4rem 1rem;
+    row-gap: 2rem;
+  }
+
+  .auth-page__sign-in {
+    width: 100%;
+    padding: 2rem 0;
+  }
+
+  .auth-page__sign-up {
+    padding: 0;
+    width: 100%;
+    padding: 2rem 0;
+  }
+
+  .auth-page__form input {
+    height: 3rem;
+  }
+
+  .auth-page__form label {
+    font-size: 1rem;
+  }
+
+  .auth-page__form input[type="submit"] {
+    min-height: 4rem;
+    margin-top: 0rem;
+  }
+
+  .horizontal-line {
+    border: 1px solid rgba(0, 0, 0, 0.068);
+    width: 90%;
+  }
 }
