--- a/frontend/pages/home/home.css
+++ b/frontend/pages/home/home.css
@@ -36,7 +36,7 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, 0);
-  box-shadow: 0 0 10px 1px #202a21da;
+  box-shadow: 0 0 4px 1px #75A22A;
 }
 
 .home-page__profile-photo img {
@@ -57,11 +57,11 @@ html {
 .home-page__menu {
   width: 100%;
   min-height: 3rem;
-  margin: 0.1rem 0 0 0;
+  margin: 0.3rem 0 0 0;
   display: flex;
   justify-content: space-between;
-  background-color: #202a21da;
-  box-shadow: 0 0 10px 1px #202a21da;
+  background-color: #74a22ad5;
+  /* box-shadow: 0 0 10px 1px #202a21da; */
 }
 
 .home-page__menu-half {
@@ -205,7 +205,7 @@ html {
 
 .home-page__hero-container div:first-child {
   flex-grow: 1;
-  color: #202a2187;
+  color: #000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -218,7 +218,7 @@ html {
 .home-page__footer {
   width: 100%;
   height: 2.5rem;
-  background-color: #202a21da;
+  background-color: #75A22A;
   display: flex;
   align-items: center;
   justify-content: center;
