--- a/frontend/style.css
+++ b/frontend/style.css
@@ -67,7 +67,7 @@ img {
 .auth-page__header {
   text-align: center;
   font-size: 1.8rem;
-  color: #dc9c6c;
+  color: #BEB189;
 }
 
 .auth-page__form {
@@ -104,7 +104,7 @@ img {
   margin-top: 2rem;
   padding-left: 0;
   font-size: 1.1rem;
-  background-color: #dc9c6c;
+  background-color: #789383;
   color: white;
 }
 
